tests/sksl/errors/EmptyArray.glsl
### Compilation failed:

error: 1: array size must be positive
error: 2: array size must be positive
2 errors
